Correcoes concluidas
